restli-server/src/test/pegasus/com/linkedin/restli/server/errors/MockInputError.pdsc
{
  "type": "record",
  "name": "MockInputError",
  "namespace": "com.linkedin.restli.server.errors",
  "doc": "Describes an input validation error.",
  "fields": [
    {
      "name": "code",
      "type": "string",
      "doc": "The error code, e.g. FIELD_VALUE_TOO_LOW."
    },
    {
      "name": "inputPath",
      "type": "string",
      "doc": "A path leading to a field in the request that failed the validation."
    },
    {
      "name": "value",
      "type": "string",
      "doc": "The provided value in the client request.",
      "optional": true
    },
    {
      "name": "key",
      "type": "string",
      "doc": "The key or an index of an entity in the request for batch operations.",
      "optional": true
    },
    {
      "name": "description",
      "type": "string",
      "doc": "A description of why the request element is bad.",
      "optional": true
    },
    {
      "name": "minLength",
      "type": "int",
      "doc": "The minimum allowed length for the input field."
    },
    {
      "name": "maxLength",
      "type": "int",
      "doc": "The maximum allowed length for the input field.",
      "optional": true
    },
    {
      "name": "minValue",
      "type": "int",
      "doc": "The minimum value that is allowed for an input field.",
      "optional": true
    },
    {
      "name": "maxValue",
      "type": "int",
      "doc": "The maximum value that is allowed for an input field.",
      "optional": true
    }
  ]
}